Fixed about page (no more horizontal scrollbar)

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -591,7 +591,8 @@ th {
 } */
 
 .cover-image {
-  width: 100vw;
+  width: 100%;
+  padding: 0;
   margin-top: 0;
   object-fit: cover;
   height: 500px;
